Fixing history window, bug in slave controller target selection, (hopefully) hiding scrollbars

--- a/app/frontend/styles/main.css
+++ b/app/frontend/styles/main.css
@@ -8,6 +8,10 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     vertical-align: baseline;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 
 /* HTML5 display-role reset for older browsers */
 
